modify package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-mobile",
+  "name": "frontui-mobile",
   "version": "1.0.0",
   "description": "mobile framework for frontui",
   "main": "index.js",
